common/force-app/main/default/objects/VoiceCall/fields/Call__c.field-meta.xml
<CustomField>
    <fullName>Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call</label>
    <referenceTo>Mobile_Call__c</referenceTo>
    <relationshipLabel>Voice Call</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>