common/force-app/main/default/objects/VoiceCall/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field that we will use to match up if the Related Record field is an Account</description>
    <inlineHelpText>--Automated field-- Field that we will use to match up if the Related Record field is an Account</inlineHelpText>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Voice Calls</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>