common/force-app/main/default/objects/VoiceCall/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CR - Calendly Callback Request</fullName>
            </value>
            <value>
                <fullName>CR - Closing</fullName>
            </value>
            <value>
                <fullName>CRC - Portal - Access / verification issues</fullName>
            </value>
            <value>
                <fullName>CR - CRC - CRES - Customer Relationship Enhancement Strategy</fullName>
            </value>
            <value>
                <fullName>CR - CRC - MLI&gt;50</fullName>
            </value>
            <value>
                <fullName>CR - CRP - Bazaa</fullName>
            </value>
            <value>
                <fullName>CR - CRP - Brain Vector</fullName>
            </value>
            <value>
                <fullName>CR - CRP - Calceus</fullName>
            </value>
            <value>
                <fullName>CR - CRP - Carrara</fullName>
            </value>
            <value>
                <fullName>CR - CRP - Curae</fullName>
            </value>
            <value>
                <fullName>CR - CRP - EnGeneIC</fullName>
            </value>
            <value>
                <fullName>CR - CRP - GGG</fullName>
            </value>
            <value>
                <fullName>CR - CRP - Moggill Ferry Road</fullName>
            </value>
            <value>
                <fullName>CR - CRP - Morningside</fullName>
            </value>
            <value>
                <fullName>CR - CRP - Post Webinar Sprint</fullName>
            </value>
            <value>
                <fullName>CR - CRP - Public Square</fullName>
            </value>
            <value>
                <fullName>CR - CRP - VC Con Note / Prom Note</fullName>
            </value>
            <value>
                <fullName>CR - CRP - Waveswell</fullName>
            </value>
            <value>
                <fullName>CR - DASP</fullName>
            </value>
            <value>
                <fullName>CR - Face to Face Campaign</fullName>
            </value>
            <value>
                <fullName>CR - Lead - Google Ad</fullName>
            </value>
            <value>
                <fullName>CR - New Investor Register</fullName>
            </value>
            <value>
                <fullName>CR - New Lead - Qualifying</fullName>
            </value>
            <value>
                <fullName>CR - Nurturing Relationship</fullName>
            </value>
            <value>
                <fullName>CR - Perkii</fullName>
            </value>
            <value>
                <fullName>CR - Referral Partner</fullName>
            </value>
            <value>
                <fullName>CR - RFL/RFM</fullName>
            </value>
            <value>
                <fullName>CR - SXSW</fullName>
            </value>
            <value>
                <fullName>CR - VC Fixed Income Fund</fullName>
            </value>
            <value>
                <fullName>CR - VCH Rights Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>