common/force-app/main/default/objects/VoiceCall/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRC Team</fullName>
            </value>
            <value>
                <fullName>IR Team</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>