common/force-app/main/default/objects/VoiceCall/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>The type of call record.</inlineHelpText>
    <label>Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>