common/force-app/main/default/objects/VoiceCall/listViews/Callbacks.listView-meta.xml
<ListView>
    <fullName>Callbacks</fullName>
    <columns>Name</columns>
    <columns>Type__c</columns>
    <columns>CallDisposition</columns>
    <columns>Related_Account__c</columns>
    <columns>FromPhoneNumber</columns>
    <columns>Missed_Call__c</columns>
    <columns>IsRecorded</columns>
    <columns>Owner</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Callback</value>
    </filters>
    <label>Callbacks</label>
</ListView>