common/force-app/main/default/objects/VoiceCall/listViews/CM_VoiceCall.listView-meta.xml
<ListView>
    <fullName>CM_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>CM</label>
    <queue>CM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>