common/force-app/main/default/objects/VoiceCall/listViews/Missed_Calls.listView-meta.xml
<ListView>
    <fullName>Missed_Calls</fullName>
    <columns>CallStartDateTime</columns>
    <columns>FromPhoneNumber</columns>
    <columns>Type__c</columns>
    <columns>Missed_Call__c</columns>
    <columns>CallResolution</columns>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>EndUser</columns>
    <columns>QualityScore</columns>
    <columns>CallOrigin</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Missed_Call__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Missed Calls</label>
</ListView>