common/force-app/main/default/objects/VoiceCall/listViews/Missed_Calls_Relevant_to_CRC_s.listView-meta.xml
<ListView>
    <fullName>Missed_Calls_Relevant_to_CRC_s</fullName>
    <columns>Name</columns>
    <columns>Related_Account__c</columns>
    <columns>Team__c</columns>
    <columns>Type__c</columns>
    <columns>FromPhoneNumber</columns>
    <columns>Missed_Call__c</columns>
    <columns>CreatedDate</columns>
    <columns>CallResolution</columns>
    <columns>Description</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>CRC Team,IR Team,Unassigned</value>
    </filters>
    <filters>
        <field>Missed_Call__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Missed Calls Relevant to CRC&apos;s</label>
</ListView>