common/force-app/main/default/objects/VoiceCall/listViews/My_VoiceCalls.listView-meta.xml
<ListView>
    <fullName>My_VoiceCalls</fullName>
    <columns>Name</columns>
    <columns>CallType</columns>
    <columns>FromPhoneNumber</columns>
    <columns>CallResolution</columns>
    <columns>CallStartDateTime</columns>
    <columns>EndUser</columns>
    <columns>Description</columns>
    <columns>Tags__c</columns>
    <columns>Team__c</columns>
    <columns>Owner</columns>
    <columns>CallOrigin</columns>
    <columns>QualityScore</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Tags__c</field>
        <operation>includes</operation>
        <value>CR - VC Fixed Income Fund,CR - VCH Rights Issue</value>
    </filters>
    <label>My Voice Calls</label>
</ListView>