common/force-app/main/default/objects/VoiceCall/listViews/SCV_Basic_Queue_CCQ_04vJ30000004CB4_VoiceCall.listView-meta.xml
<ListView>
    <fullName>SCV_Basic_Queue_CCQ_04vJ30000004CB4_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>SCV Basic Queue</label>
    <queue>SCV_Basic_Queue_CCQ_04vJ30000004CB4</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>