common/force-app/main/default/objects/VoiceCall/listViews/Updated_Voice_Calls_List.listView-meta.xml
<ListView>
    <fullName>Updated_Voice_Calls_List</fullName>
    <columns>Name</columns>
    <columns>Type__c</columns>
    <columns>Team__c</columns>
    <columns>Related_Account__c</columns>
    <columns>FromPhoneNumber</columns>
    <columns>Missed_Call__c</columns>
    <columns>IsRecorded</columns>
    <columns>ToPhoneNumber</columns>
    <columns>Description</columns>
    <columns>Owner</columns>
    <columns>EndUser</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Updated Voice Calls</label>
</ListView>