common/force-app/main/default/objects/VoiceCall/listViews/VC_CRC_Queue_VoiceCall.listView-meta.xml
<ListView>
    <fullName>VC_CRC_Queue_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>VC CRC Queue</label>
    <queue>VC_CRC_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>