common/force-app/main/default/objects/VoiceCall/listViews/VC_IR_Queue_VoiceCall.listView-meta.xml
<ListView>
    <fullName>VC_IR_Queue_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>VC IR Queue</label>
    <queue>VC_IR_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>